--- a/src/app/pages/school/bursary/cash-desk/cash-desk.component.html
+++ b/src/app/pages/school/bursary/cash-desk/cash-desk.component.html
@@ -10,7 +10,7 @@
                             <ul ngbNav #Justify="ngbNav" [(activeId)]="activeTab"
                                 class="nav nav-tabs nav-tabs-custom nav-primary nav-justified mb-3">
                                 <li [ngbNavItem]="1"><a ngbNavLink class="tab-income"><span class="d-sm-block"><i
-                                                class="ri-hand-coin-line align-bottom me-1"></i> Fees</span></a>
+                                                class="ri-coin-line align-bottom me-1"></i> Fees</span></a>
                                     <ng-template ngbNavContent>
                                         <form>
 
