Refactor cash desk component to extend BaseComponent and integrate StudentService; update tab structure for Fees, Deposit, and Withdrawal.

--- a/src/app/pages/school/bursary/cash-desk/cash-desk.component.html
+++ b/src/app/pages/school/bursary/cash-desk/cash-desk.component.html
@@ -9,24 +9,21 @@
                         <div class="col-xxl-12">
                             <ul ngbNav #Justify="ngbNav" [(activeId)]="activeTab"
                                 class="nav nav-tabs nav-tabs-custom nav-primary nav-justified mb-3">
-                                <li [ngbNavItem]="1"><a ngbNavLink class="tab-income"><span class="d-sm-block"><i
-                                                class="ri-coin-line align-bottom me-1"></i> Fees</span></a>
+                                <li [ngbNavItem]="1"><a ngbNavLink class="tab-income"><span class="d-sm-block"><i class="ri-coin-line align-bottom me-1"></i> Fees</span></a>
                                     <ng-template ngbNavContent>
                                         <form>
 
                                         </form>
                                     </ng-template>
                                 </li>
-                                <li [ngbNavItem]="2"><a ngbNavLink class="tab-income"><span class="d-sm-block"><i
-                                                class="ri-arrow-left-down-line me-1"></i> Deposit</span></a>
+                                <li [ngbNavItem]="2"><a ngbNavLink class="tab-income"><span class="d-sm-block"><i class="ri-arrow-left-down-line me-1"></i> Deposit</span></a>
                                     <ng-template ngbNavContent>
                                         <form>
 
                                         </form>
                                     </ng-template>
                                 </li>
-                                <li [ngbNavItem]="3"><a ngbNavLink class="tab-expenses"><span class="d-sm-block"><i
-                                                class="ri-arrow-right-up-line me-1"></i> Withdrawal</span></a>
+                                <li [ngbNavItem]="3"><a ngbNavLink class="tab-expenses"><span class="d-sm-block"><i class="ri-arrow-right-up-line me-1"></i> Withdrawal</span></a>
                                     <ng-template ngbNavContent>
                                         <form>
 
