--- a/src/app/pages/school/results/register-results/register-results.component.html
+++ b/src/app/pages/school/results/register-results/register-results.component.html
@@ -41,7 +41,7 @@
                                             bindLabel="name" bindValue="id" placeholder="Subject"></ng-select>
                                     </div>
                                     <div class="col-xxl-3 col-lg-6">
-                                        <ng-select [items]="examTypes" formControlName="examTypeId" bindLabel="name"
+                                        <ng-select [items]="examTypes" formControlName="examTypeId" bindLabel="examTypeName"
                                             bindValue="examTypeId" placeholder="Exam Type"></ng-select>
                                     </div>
                                     <div class="col-xxl-2 col-lg-12">
@@ -70,7 +70,7 @@
                                             bindLabel="name" bindValue="id" placeholder="Subject"></ng-select>
                                     </div>
                                     <div class="col-xxl-3 col-lg-6">
-                                        <ng-select [items]="examTypes" formControlName="examTypeId" bindLabel="name"
+                                        <ng-select [items]="examTypes" formControlName="examTypeId" bindLabel="examTypeName"
                                             bindValue="examTypeId" placeholder="Exam Type"></ng-select>
                                     </div>
                                     <div class="col-xxl-2 col-lg-12">
