--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -143,7 +143,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-center">
-                        <p class="mb-0 text-muted">&copy; {{year}} INSPIRE. Powered by ByteCreed</p>
+                        <p class="mb-0 text-muted">&copy; {{year}} INSPIRE.</p>
                     </div>
                 </div>
             </div>
