Implement accounting module with Journals and Chart of Accounts components; update routing and menu structure

--- a/src/app/pages/school/bursary/cash-desk/cash-desk.component.html
+++ b/src/app/pages/school/bursary/cash-desk/cash-desk.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumbs title="Bursary" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
+<app-breadcrumbs title="BURSARY" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
 
 <div class="row">
     <div class="col-xxl-6">
